[package]
name = "airsens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
i2cdev = "0.6.0"
embedded-hal = "0.2.7"
chrono = "0.4.19"

[target.'cfg(target_os = "linux")'.dependencies]
sensor-temp-humidity-sht40 = "0.2.601"
linux-embedded-hal = "0.3.2"